In loan_default_prediction.ipynb > EDA > Univariate > Numerical section: Rename plot_histogram_matrix function to plot_numerical_distributions, use fig and axes for subplots and update fontsizes

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1804,31 +1804,39 @@
     "import math\n",
     "\n",
     "\n",
-    "# Function to plot a histogram matrix of all numerical columns\n",
-    "def plot_histogram_matrix(df, numerical_columns, safe_to_file=False):\n",
+    "# Function to visualize distributions of all numerical columns using a histogram matrix\n",
+    "def plot_numerical_distributions(df, numerical_columns, safe_to_file=False):\n",
     "    # Calculate number of rows and columns for subplot grid\n",
     "    n_plots = len(numerical_columns)\n",
     "    n_cols = 3  \n",
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
     "    # Set the figure size based on 4x3 inches per subplot\n",
-    "    plt.figure(figsize=(n_cols * 4, n_rows * 3))\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 3))\n",
+    "    \n",
+    "    # Flatten the axes for easier iteration\n",
+    "    axes = axes.flat\n",
     "    \n",
     "    # Iterate over all numerical columns\n",
     "    for i, column in enumerate(numerical_columns):\n",
-    "        # Create subplot (current subplot i+1 because subplot indices start at 1)\n",
-    "        plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
     "        \n",
     "        # Create histogram for the current column\n",
-    "        sns.histplot(df[column])\n",
+    "        sns.histplot(data=df, x=column, ax=ax)\n",
     "        \n",
-    "        # Customize histogram title and axes labels\n",
-    "        plt.title(column.title().replace(\"_\", \" \"))\n",
-    "        plt.ylabel(\"Frequency\")\n",
-    "        plt.xlabel(\"\")\n",
-    "    \n",
+    "        # Customize histogram title, axes labels and tick labels\n",
+    "        ax.set_title(column.title().replace(\"_\", \" \"), fontsize=14)\n",
+    "        ax.set_ylabel(\"Frequency\", fontsize=12)\n",
+    "        ax.set_xlabel(\"\")\n",
+    "        ax.tick_params(axis=\"both\", labelsize=10)\n",
+    "\n",
+    "    # Hide any unused subplots \n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "        \n",
     "    # Adjust layout to prevent overlap\n",
-    "    plt.tight_layout()\n",
+    "    fig.tight_layout()\n",
     "    \n",
     "    # Save plot to file\n",
     "    if safe_to_file:\n",
@@ -1836,19 +1844,19 @@
     "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
     "        if not os.path.exists(image_path):\n",
     "            try:        \n",
-    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
-    "                print(f\"Histogram matrix saved successfully to '{image_path}'.\")\n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Numerical distributions plot (histogram matrix) saved successfully to '{image_path}'.\")\n",
     "            except Exception as e:\n",
-    "                print(f\"Error saving histogram matrix: {e}\")\n",
+    "                print(f\"Error saving numerical distributions plot (histogram matrix): {e}\")\n",
     "        else:\n",
-    "            print(f\"Skip saving histogram matrix to file: '{image_path}' already exists.\")\n",
+    "            print(f\"Skip saving numerical distributions plot (histogram matrix) to file: '{image_path}' already exists.\")\n",
     "            \n",
     "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "plot_histogram_matrix(X_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
+    "# Use function to visualize distributions of all numerical features in the training data\n",
+    "plot_numerical_distributions(X_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
    ]
   },
   {
