In machine_learning_template.ipynb > EDA > Univariate > Categorical section: Rename plot_categorical_frequencies function to plot_categorical_distributions, use fig and axes for subplots, and update fontsizes

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2004,20 +2004,23 @@
     "import matplotlib.ticker as mtick\n",
     "\n",
     "\n",
-    "# Function to visualize categorical frequencies with a bar plot matrix \n",
-    "def plot_categorical_frequencies(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
+    "# Function to visualize categorical frequency distributions using a bar plot matrix \n",
+    "def plot_categorical_distributions(df, categorical_columns, max_categories=5, safe_to_file=False):\n",
     "    # Calculate number of rows and columns for subplot grid\n",
     "    n_plots = len(categorical_columns)\n",
     "    n_cols = 3  \n",
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
     "    # Set the figure size based on 4x4 inches per subplot\n",
-    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Flatten the axes for easier iteration\n",
+    "    axes = axes.flat\n",
     "    \n",
     "    # Iterate over all categorical columns\n",
     "    for i, column in enumerate(categorical_columns):      \n",
-    "        # Create subplot (current subplot i+1 because subplot indices start at 1)\n",
-    "        plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
     "        \n",
     "        # Calculate frequencies for the current column\n",
     "        column_frequencies = df[column].value_counts(normalize=True)  # False for absolute frequencies\n",
@@ -2029,26 +2032,36 @@
     "        if len(column_frequencies) > max_categories:\n",
     "            column_frequencies = column_frequencies.head(max_categories)\n",
     "            plot_title += f\" (Top {max_categories})\"\n",
-    "            plt.xticks(rotation=45, ha=\"right\")\n",
     "        \n",
     "        # Create bar plot for the current column\n",
-    "        ax = sns.barplot(x=column_frequencies.index, y=column_frequencies.values)\n",
+    "        sns.barplot(x=column_frequencies.index, y=column_frequencies.values, ax=ax)\n",
     "        \n",
     "        # Add value labels\n",
     "        value_labels = [f\"{value * 100:.1f}%\" for value in column_frequencies.values]\n",
     "        ax.bar_label(ax.containers[0], labels=value_labels, padding=2, fontsize=10 if len(column_frequencies) <= 6 else 7)  \n",
-    "            \n",
-    "        # Customize bar plot axes labels and ticks\n",
-    "        plt.title(plot_title)\n",
-    "        plt.ylabel(\"Frequency\")\n",
-    "        plt.xlabel(\"\")\n",
-    "        ax.set_xticks(range(len(column_frequencies.index)))\n",
-    "        ax.set_xticklabels(str(label).title().replace(\"_\", \" \") for label in column_frequencies.index)\n",
+    "        \n",
+    "        # Customize title and axes labels \n",
+    "        ax.set_title(plot_title, fontsize=14)\n",
+    "        ax.set_ylabel(\"Frequency\", fontsize=12)\n",
+    "        ax.set_xlabel(\"\")\n",
+    "\n",
+    "        # Customize axes tick labels\n",
+    "        xticks = range(len(column_frequencies.index))\n",
+    "        xticklabels = [str(label).title().replace(\"_\", \" \") for label in column_frequencies.index]\n",
+    "        if len(column_frequencies) >= 5:  # rotate x-tick labels if 5 or more categories \n",
+    "            ax.set_xticks(xticks, labels=xticklabels, fontsize=11, rotation=45, ha=\"right\")\n",
+    "        else:\n",
+    "            ax.set_xticks(xticks, labels=xticklabels, fontsize=11)\n",
+    "        ax.tick_params(axis=\"y\", labelsize=10)\n",
     "        ax.set_ylim(0, column_frequencies.max() * 1.1)  # set y-axis from 0 to 10% above maximum frequency\n",
     "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # format y-axis as percent\n",
     "\n",
+    "    # Hide any unused subplots \n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "        \n",
     "    # Adjust layout to prevent overlap\n",
-    "    plt.tight_layout()\n",
+    "    fig.tight_layout()\n",
     "    \n",
     "    # Save the plot to file\n",
     "    if safe_to_file:\n",
@@ -2056,19 +2069,19 @@
     "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
     "        if not os.path.exists(image_path):\n",
     "            try:        \n",
-    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
-    "                print(f\"Bar plot matrix saved successfully to '{image_path}'.\")\n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Categorical distributions plot (bar plot matrix) saved successfully to '{image_path}'.\")\n",
     "            except Exception as e:\n",
-    "                print(f\"Error saving bar plot matrix: {e}\")\n",
+    "                print(f\"Error saving categorical distributions plot (bar plot matrix): {e}\")\n",
     "        else:\n",
-    "            print(f\"Skip saving bar plot matrix to file: '{image_path}' already exists.\")\n",
+    "            print(f\"Skip saving categorical distributions plot (bar plot matrix) to file: '{image_path}' already exists.\")\n",
     "    \n",
     "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
     "\n",
     "# Use function to visualize categorical frequencies of all boolean and categorical columns in training data\n",
-    "plot_categorical_frequencies(X_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
+    "plot_categorical_distributions(X_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
    ]
   },
   {
