In machine_learning_template.ipynb > EDA > Univariate > Categorical section: Retain inherent order of categories for ordinal columns in plot_categorical_distributions function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2024,7 +2024,11 @@
     "        \n",
     "        # Calculate frequencies for the current column\n",
     "        column_frequencies = df[column].value_counts(normalize=True)  # False for absolute frequencies\n",
-    "    \n",
+    "\n",
+    "        # Retain inherent order of categories for ordinal columns\n",
+    "        if column == \"ordinal_column\":\n",
+    "            column_frequencies = column_frequencies.reindex([\"low\", \"medium\", \"high\"])  # define the explicit order of categories\n",
+    "            \n",
     "        # Format plot title\n",
     "        plot_title = column.title().replace(\"_\", \" \")\n",
     "    \n",
