In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Numerical section: Use fig and axes in plot_numerical_relationships function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2356,12 +2356,15 @@
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
     "    # Set the figure size based on 4x4 inches per subplot\n",
-    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Flatten axes for easier iteration\n",
+    "    axes = axes.flat\n",
     "    \n",
     "    # Iterate over each column pair\n",
     "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
-    "        # Create subplot\n",
-    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
     "        \n",
     "        # Create scatter plot\n",
     "        sns.scatterplot(data=df, x=column_1, y=column_2, ax=ax)\n",
@@ -2374,8 +2377,12 @@
     "        ax.set_ylabel(column_2_name, fontsize=12)\n",
     "        ax.tick_params(axis=\"both\", labelsize=10)\n",
     "            \n",
+    "    # Hide any unused subplots\n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "        \n",
     "    # Adjust layout to prevent overlap\n",
-    "    plt.tight_layout()\n",
+    "    fig.tight_layout()\n",
     "\n",
     "    # Save the plot to file\n",
     "    if safe_to_file:\n",
@@ -2383,7 +2390,7 @@
     "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
     "        if not os.path.exists(image_path):\n",
     "            try:        \n",
-    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
     "                print(f\"Numerical relationships plot (scatter plot matrix) saved successfully to '{image_path}'.\")\n",
     "            except Exception as e:\n",
     "                print(f\"Error saving numerical relationships plot (scatter plot matrix): {e}\")\n",
@@ -2394,7 +2401,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Use function to visualize relationships between numerical columns in the training data\n",
+    "# Use function to visualize relationships between all numerical columns in the training data\n",
     "plot_numerical_relationships(df_train, numerical_columns, safe_to_file=\"numerical_relationships_scatterplots.png\")"
    ]
   },
