--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2570,12 +2570,15 @@
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
     "    # Set the figure size based on 4x4 inches per subplot\n",
-    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Flatten axes for easier iteration\n",
+    "    axes = axes.flat\n",
     "    \n",
     "    # Iterate over all numerical columns\n",
     "    for i, numerical_column in enumerate(numerical_columns):\n",
-    "        # Create subplot \n",
-    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
     "        \n",
     "        # Create bar plot \n",
     "        sns.barplot(data=df, x=categorical_column, y=numerical_column, estimator=estimator, errorbar=None, ax=ax)\n",
@@ -2606,8 +2609,12 @@
     "        ax.set_xlabel(\"\")\n",
     "        ax.set_ylabel(numerical_column_name, fontsize=12)\n",
     "    \n",
+    "    # Hide any unused subplots\n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "        \n",
     "    # Adjust layout to prevent overlap\n",
-    "    plt.tight_layout()\n",
+    "    fig.tight_layout()\n",
     "\n",
     "    # Save the plot to file\n",
     "    if safe_to_file:\n",
@@ -2615,12 +2622,13 @@
     "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
     "        if not os.path.exists(image_path):\n",
     "            try:        \n",
-    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
     "                print(f\"Numerical-categorical relationships plot (bar plot matrix) saved successfully to '{image_path}'.\")\n",
     "            except Exception as e:\n",
     "                print(f\"Error saving numerical-categorical relationships plot (bar plot matrix): {e}\")\n",
     "        else:\n",
     "            print(f\"Skip saving numerical-categorical relationships plot (bar plot matrix) to file: '{image_path}' already exists.\")\n",
+    " \n",
     "    \n",
     "    # Show the plot\n",
     "    plt.show()\n",
