In machine_learning_template.ipynb > EDA > Bivariate > Categorical vs Categorical section: Use fig and axes and customize xticklabels wit ax.set_xticks in plot_categorical_relationships function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2903,13 +2903,16 @@
     "    n_cols = 3  \n",
     "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
-    "    # Set the figure size based on 4x4 inches per subplot\n",
-    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    # Create subplot grid with figure size based on 4x4 inches per subplot\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Flatten the axes for easier iteration\n",
+    "    axes = axes.flat\n",
     "    \n",
     "    # Iterate over each column pair\n",
     "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
-    "        # Create subplot\n",
-    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
     "\n",
     "        # Ensure column_1 (plot x-axis) has higher cardinality (more categories) for plot readability\n",
     "        if df[column_1].nunique() < df[column_2].nunique():\n",
@@ -2945,16 +2948,21 @@
     "        \n",
     "        # Customize axes ticks\n",
     "        ax.yaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=0))  # format y-axis tick labels as percentages\n",
-    "        ax.set_xticks(range(plot_df[column_1].nunique()))\n",
-    "        ax.set_xticklabels(label.get_text().title().replace(\"_\", \" \") for label in ax.get_xticklabels())  # format x-axis tick labels\n",
+    "        xticks = range(plot_df[column_1].nunique())\n",
+    "        xticklabels = [label.get_text().title().replace(\"_\", \" \") for label in ax.get_xticklabels()]\n",
+    "        ax.set_xticks(xticks, labels=xticklabels, fontsize=10)\n",
     "\n",
     "        # Customize legend\n",
     "        legend_handles, legend_labels = ax.get_legend_handles_labels()\n",
     "        legend_labels = [str(label).title().replace(\"_\", \" \") for label in legend_labels]  # format legend labels \n",
     "        ax.legend(handles=legend_handles, labels=legend_labels, title=column_2_name)    \n",
     "    \n",
+    "    # Hide any unused subplots\n",
+    "    for j in range(i + 1, len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "        \n",
     "    # Adjust layout to prevent overlap\n",
-    "    plt.tight_layout()\n",
+    "    fig.tight_layout()\n",
     "\n",
     "    # Save the plot to file\n",
     "    if safe_to_file:\n",
@@ -2962,12 +2970,13 @@
     "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
     "        if not os.path.exists(image_path):\n",
     "            try:        \n",
-    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
     "                print(f\"Categorical relationships plot (grouped bar plot matrix) saved successfully to '{image_path}'.\")\n",
     "            except Exception as e:\n",
     "                print(f\"Error saving categorical relationships plot (grouped bar plot matrix): {e}\")\n",
     "        else:\n",
     "            print(f\"Skip saving categorical relationships plot (grouped bar plot matrix) to file: '{image_path}' already exists.\")\n",
+    "  \n",
     "    \n",
     "    # Show the plot\n",
     "    plt.show()\n",
