In machine_learning_template.ipynb > EDA section: Merge X_train and y_train to create single df containing all partially preprocessed columns (not yet scaled or encoded) for EDA and use consistently throughout entire EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1718,7 +1718,22 @@
    "source": [
     "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px;\">\n",
     "    <h1 style=\"margin:0px\">Exploratory Data Analysis (EDA)</h1>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Merge <code>X_train</code> and <code>y_train</code> to create a single DataFrame with both features and target, containing all partially preprocessed columns (not yet scaled or encoded) for EDA. \n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c07919b-7bfa-483b-b4e8-1d31a618b91b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge X_train and y_train \n",
+    "df_train = pd.concat([X_train, y_train], axis=1)"
    ]
   },
   {
@@ -1768,7 +1783,7 @@
    "outputs": [],
    "source": [
     "# Descriptive statistics of a single numerical column\n",
-    "X_train[\"numerical_column\"].describe()"
+    "df_train[\"numerical_column\"].describe()"
    ]
   },
   {
@@ -1779,7 +1794,7 @@
    "outputs": [],
    "source": [
     "# Table of descriptive statistics of all numerical columns\n",
-    "X_train[numerical_columns].describe().transpose()"
+    "df_train[numerical_columns].describe().transpose()"
    ]
   },
   {
@@ -1855,8 +1870,8 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Use function to visualize distributions of all numerical features in the training data\n",
-    "plot_numerical_distributions(X_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
+    "# Use function to visualize distributions of all numerical columns in the training data\n",
+    "plot_numerical_distributions(df_train, numerical_columns, safe_to_file=\"numerical_distributions_histograms.png\")"
    ]
   },
   {
@@ -1884,7 +1899,7 @@
     "plt.figure(figsize=(6, 4))\n",
     "\n",
     "# Create histogram \n",
-    "sns.histplot(X_train[\"numerical_column\"])\n",
+    "sns.histplot(df_train[\"numerical_column\"])\n",
     "\n",
     "# Customize title, axes labels and tick labels \n",
     "plt.title(\"numerical_column\", fontsize=14)\n",
@@ -1931,9 +1946,9 @@
    "source": [
     "# --- Frequencies of a single categorical column ---\n",
     "# Calculate absolute and relative frequencies \n",
-    "absolute_frequencies = X_train[\"categorical_column\"].value_counts()\n",
-    "relative_frequencies = X_train[\"categorical_column\"].value_counts(normalize=True) \n",
-    "percent_frequencies = relative_frequencies.map(lambda x: f\"{x * 100:.2f}%\")  # formatted as string with % sign\n",
+    "absolute_frequencies = df_train[\"categorical_column\"].value_counts()\n",
+    "relative_frequencies = df_train[\"categorical_column\"].value_counts(normalize=True) \n",
+    "percent_frequencies = relative_frequencies.map(lambda x: f\"{x * 100:.2f}%\")  # formatted as percent with 2 decimals (string)\n",
     "\n",
     "# Show frequency table\n",
     "pd.concat([absolute_frequencies, percent_frequencies], axis=1, keys=[\"absolute_frequency\", \"percent_frequency\"]).reset_index()"
@@ -1970,7 +1985,7 @@
     "\n",
     "\n",
     "# Use function to create frequency tables of all categorical and boolean columns in the training data\n",
-    "frequencies = calculate_frequencies(X_train, categorical_columns + boolean_columns)\n",
+    "frequencies = calculate_frequencies(df_train, categorical_columns + boolean_columns)\n",
     "\n",
     "# Display a single frequency table\n",
     "frequencies[\"categorical_column\"][[\"category\", \"absolute_frequency\", \"percent_frequency\"]]\n",
@@ -2085,7 +2100,7 @@
     "\n",
     "\n",
     "# Use function to visualize categorical frequencies of all boolean and categorical columns in training data\n",
-    "plot_categorical_distributions(X_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
+    "plot_categorical_distributions(df_train, boolean_columns + categorical_columns, max_categories=8, safe_to_file=\"categorical_frequencies_barplots.png\")"
    ]
   },
   {
@@ -2232,9 +2247,6 @@
     "    # Show heatmap\n",
     "    plt.show()\n",
     "\n",
-    "\n",
-    "# Merge X_train and y_train to have all numerical columns (including features and target variable) in a single DataFrame\n",
-    "df_train = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
     "# Use function to plot correlation heatmap of all numerical and boolean columns in training data\n",
     "plot_correlation_heatmap(df_train, numerical_columns + boolean_columns, safe_to_file=\"correlation_heatmap.png\")"
@@ -3005,7 +3017,7 @@
    "outputs": [],
    "source": [
     "# Create contingency table (normalize=\"index\" calculates the percentage distribution of column_2 within each category of column_1)\n",
-    "contingency_table = pd.crosstab(df[\"categorical_column_1\"], df[\"categorical_column_2\"], normalize=\"index\") \n",
+    "contingency_table = pd.crosstab(df_train[\"categorical_column_1\"], df_train[\"categorical_column_2\"], normalize=\"index\") \n",
     "\n",
     "# Sort categories from highest to lowest (by class 1 of categorical_column_2)\n",
     "contingency_table = contingency_table.sort_values(by=1, ascending=False)\n",
@@ -3051,7 +3063,7 @@
     "ax.legend(handles=legend_handles, labels=legend_labels, title=column_2_name)    \n",
     "\n",
     "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
+    "fig.tight_layout()\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
