In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Numerical > Visualize Relationships section: Customize individual scatter plots for better interpretability

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2144,7 +2144,7 @@
     "plt.ylabel(\"\")\n",
     "plt.xlabel(\"Frequency\", fontsize=12)\n",
     "plt.tick_params(axis=\"both\", labelsize=10)\n",
-    "plt.gca().xaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=1))  # x tick labels as percentages (1 decimal)\n",
+    "plt.gca().xaxis.set_major_formatter(mtick.PercentFormatter(xmax=1.0, decimals=1))  # x-tick labels as percentages (1 decimal)\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
@@ -2423,7 +2423,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Scatter plot between two numerical columns.\n",
+    "    📌 Customize individual scatter plots for better interpretability. <br><br>\n",
+    "    💡 Example: Define the exact axes ticks for two columns representing years. \n",
     "</div>"
    ]
   },
@@ -2440,10 +2441,14 @@
     "# Create scatter plot \n",
     "sns.scatterplot(data=df_train, x=\"numerical_column_1\", y=\"numerical_column_2\")\n",
     "\n",
-    "# Add title and axis labels\n",
-    "plt.title(\"Relationship between numerical_column_1 and numerical_column_2\")\n",
-    "plt.xlabel(\"numerical_column_1\")\n",
-    "plt.ylabel(\"numerical_column_2\")\n",
+    "# Customize title and axes labels\n",
+    "plt.title(\"Relationship between numerical_column_1 and numerical_column_2\", fontsize=14)\n",
+    "plt.xlabel(\"numerical_column_1\", fontsize=12)\n",
+    "plt.ylabel(\"numerical_column_2\", fontsize=12)\n",
+    "\n",
+    "# Customize axes tick labels\n",
+    "plt.xticks(range(0, 21, 1), fontsize=10)  # set x-axis ticks from 0 to 20 years in 1-year steps\n",
+    "plt.yticks(range(5, 11, 1), fontsize=10)  # set y-axis ticks from 5 to 10 years in 1-year steps\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
