In machine_learning_template.ipynb > EDA > Bivariate > Numerical vs Catgorical > Group-Wise Statistics section: Update markdown cell for effect size

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2478,7 +2478,7 @@
     "</div> \n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Group-wise statistics of all numerical columns by a single categorical column. \n",
+    "    📌 Descriptive statistics of numerical columns grouped by a single categorical column. \n",
     "</div>"
    ]
   },
@@ -2489,19 +2489,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of all numerical columns grouped by a single categorical column (focus on median, mean, and std for easier readability)\n",
+    "# Group-wise statistics of all numerical columns by a single categorical column (focus on median, mean, and std for easier readability)\n",
     "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
     "stats_by_category"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5116ce4-6abb-4b46-8879-a91ad567c380",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Customize group-wise statistics of a single numerical column by a single categorical column.\n",
-    "</div>"
    ]
   },
   {
@@ -2511,7 +2501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of a single numerical column grouped by a single categorical column\n",
+    "# Group-wise statistics of a single numerical column by a single categorical column \n",
     "stats_by_category = df_train[\"numerical_column\"].groupby(df_train[\"categorical_column\"]).describe()\n",
     "stats_by_category"
    ]
@@ -2522,7 +2512,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Effect Size: Quantify the magnitude of the difference between two groups using Cohen's d.\n",
+    "    <strong>Effect Size</strong> <br>\n",
+    "    📌 Quantify the magnitude of the difference between two groups using Cohen's d.\n",
     "</div>"
    ]
   },
