In machine_learning_template.ipynb > Modeling (Classification) section: Rename section Training Baseline Models (Individually) to Baseline Models and update markdown documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4957,15 +4957,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae894ad4-b6fd-49da-813c-933be2653b0d",
+   "id": "8bb40770-9329-4b98-a938-6668e3a50907",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px;\">\n",
-    "    <h2 style=\"margin:0px\">Training Baseline Models (Pipeline)</h2>\n",
+    "    <h2 style=\"margin:0px\">Baseline Models</h2>\n",
     "</div> \n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Train 8 baseline models:  \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Train 8 baseline models (default hyperparameter values):  \n",
     "    <ul>\n",
     "        <li>Logistic Regression</li>\n",
     "        <li>Elastic Net Logistic Regression</li>\n",
@@ -4976,12 +4976,29 @@
     "        <li>Multi-Layer Perceptron Classifier</li>\n",
     "        <li>XGBoost Classifier</li>\n",
     "    </ul>\n",
-    "    🎯 Model performance will be evaluated using the following metrics:  \n",
+    "    🎯 Evaluate model performance:  \n",
     "    <ul>\n",
-    "        <li>Accuracy</li>\n",
-    "        <li>Precision</li>\n",
-    "        <li>Recall</li>\n",
-    "        <li>F1-score</li>\n",
+    "        <li>Metrics:\n",
+    "            <ul>\n",
+    "                <li>Accuracy</li>\n",
+    "                <li>Recall</li>\n",
+    "                <li>Precision</li>\n",
+    "                <li>F1-score</li>\n",
+    "                <li>ROC-AUC (Area Under the Receiver Operating Characteristic Curve)</li>\n",
+    "                <li>AUC-PR (Area Under the Precision-Recall Curve)</li>\n",
+    "            </ul>     \n",
+    "        </li>\n",
+    "        <li>Additional Diagnostics:\n",
+    "            <ul>\n",
+    "                <li>Comparison Plots</li>\n",
+    "                <li>Comparison Tables</li>\n",
+    "                <li>Precision-Recall Curves</li>\n",
+    "                <li>Classification Report</li>\n",
+    "                <li>Confusion Matrix</li>                \n",
+    "                <li>Feature Misclassification Analysis</li> \n",
+    "                <li>Overfitting</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
     "    </ul>\n",
     "</div>"
    ]
