In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Define baseline models and add function to train and evaluate a single model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5004,6 +5004,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb538f25-abb7-4ae9-935b-f3272740867f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import time\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    recall_score,\n",
+    "    precision_score,\n",
+    "    f1_score,\n",
+    "    roc_auc_score,\n",
+    "    precision_recall_curve,\n",
+    "    auc\n",
+    ")\n",
+    "\n",
+    "# Define features to be used for model training\n",
+    "columns_to_keep = [\"feature_1\", \"feature_2\", \"feature_3\", \"feature_4\", \"feature_5\"]\n",
+    "X_train_transformed = X_train_transformed[columns_to_keep].copy()\n",
+    "X_val_transformed = X_val_transformed[columns_to_keep].copy()\n",
+    "X_test_transformed = X_test_transformed[columns_to_keep].copy()\n",
+    "\n",
+    "# Define baseline models\n",
+    "baseline_models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"Elastic Net\": LogisticRegression(penalty=\"elasticnet\", solver=\"saga\", l1_ratio=0.5),\n",
+    "    \"K-Nearest Neighbors\": KNeighborsClassifier(),\n",
+    "    \"Support Vector Machine\": SVC(probability=True),  # get predicted probabilities for ROC-AUC and AUC-PR\n",
+    "    \"Neural Network\": MLPClassifier(random_state=42),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
+    "    \"Random Forest\": RandomForestClassifier(random_state=42),\n",
+    "    \"XGBoost\": XGBClassifier(random_state=42)\n",
+    "}\n",
+    "\n",
+    "# Function to train and evaluate a single model\n",
+    "def evaluate_model(model, X_train, y_train, X_val, y_val):\n",
+    "    # Fit model on the training data and measure training time\n",
+    "    start_time = time.time()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    end_time = time.time()    \n",
+    "    \n",
+    "    # Predict on the validation data\n",
+    "    y_val_pred = model.predict(X_val)\n",
+    "    y_val_proba = model.predict_proba(X_val)[:, 1]\n",
+    "    \n",
+    "    # Calculate evaluation metrics\n",
+    "    accuracy = accuracy_score(y_val, y_val_pred)\n",
+    "    recall = recall_score(y_val, y_val_pred)\n",
+    "    precision = precision_score(y_val, y_val_pred)\n",
+    "    f1 = f1_score(y_val, y_val_pred)\n",
+    "    roc_auc = roc_auc_score(y_val, y_val_proba)\n",
+    "    precision_curve, recall_curve, _ = precision_recall_curve(y_val, y_val_proba)\n",
+    "    auc_pr = auc(recall_curve, precision_curve)\n",
+    "    \n",
+    "    # Return fitted model, predicted values, and evaluation metrics\n",
+    "    return {\n",
+    "        \"model\": model,\n",
+    "        \"training_time\": end_time - start_time,\n",
+    "        \"y_val_pred\": y_val_pred,\n",
+    "        \"y_val_proba\": y_val_proba,\n",
+    "        \"Accuracy\": accuracy,\n",
+    "        \"Recall\": recall,\n",
+    "        \"Precision\": precision,\n",
+    "        \"F1-Score\": f1,\n",
+    "        \"ROC-AUC\": roc_auc,\n",
+    "        \"AUC-PR\": auc_pr\n",
+    "    }\n",
+    "\n",
+    "# Example usage\n",
+    "tree = evaluate_model(baseline_models[\"Decision Tree\"], X_train_transformed, y_train, X_val_transformed, y_val)\n",
+    "knn = evaluate_model(baseline_models[\"K-Nearest Neighbors\"], X_train_transformed, y_train, X_val_transformed, y_val)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
