In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Add function to train and evaluate all baseline models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5040,6 +5040,7 @@
     "    \"XGBoost\": XGBClassifier(random_state=42)\n",
     "}\n",
     "\n",
+    "\n",
     "# Function to train and evaluate a single model\n",
     "def evaluate_model(model, X_train, y_train, X_val, y_val):\n",
     "    # Fit model on the training data and measure training time\n",
@@ -5074,9 +5075,25 @@
     "        \"AUC-PR\": auc_pr\n",
     "    }\n",
     "\n",
+    "\n",
     "# Example usage\n",
-    "tree = evaluate_model(baseline_models[\"Decision Tree\"], X_train_transformed, y_train, X_val_transformed, y_val)\n",
-    "knn = evaluate_model(baseline_models[\"K-Nearest Neighbors\"], X_train_transformed, y_train, X_val_transformed, y_val)"
+    "# tree = evaluate_model(baseline_models[\"Decision Tree\"], X_train_transformed, y_train, X_val_transformed, y_val)\n",
+    "# knn = evaluate_model(baseline_models[\"K-Nearest Neighbors\"], X_train_transformed, y_train, X_val_transformed, y_val)\n",
+    "\n",
+    "\n",
+    "# Function to train and evaluate all models \n",
+    "def evaluate_all_models(models, X_train, y_train, X_val, y_val):\n",
+    "    results = {}   \n",
+    "    for model_name, model in models.items():\n",
+    "        print(f\"\\nEvaluating {model_name}...\")\n",
+    "        result = evaluate_model(model, X_train, y_train, X_val, y_val)\n",
+    "        results[model_name] = result\n",
+    "        print(f\"Training Time: {round(result['training_time'], 1)} sec\")\n",
+    "    return results\n",
+    "\n",
+    "    \n",
+    "# Use function to train all baseline models\n",
+    "baseline_model_results = evaluate_all_models(baseline_models, X_train_transformed, y_train, X_val_transformed, y_val)"
    ]
   },
   {
